--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ perl6:
   - latest
   - 2016.12
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
+  - rakudobrew build zef
+  - zef --depsonly install .
